Updates for the new AFrameJS.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				<h1>Edit Note</h1>
 			</header>
 			
-			<input type="text" data-field="title" placeholder="title"/>
-			<textarea type="text" data-field="contents" placeholder="note contents"></textarea>
+			<input type="text" data-field="title" placeholder="title" required />
+			<textarea type="text" data-field="contents" placeholder="note contents" required></textarea>
 			
 			<footer data-role="footer" data-position="fixed">
 				<div data-role="navbar">
