--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="scripts/ext/aframe-current-jquery.js"></script>
 
 	<script type="text/javascript" src="scripts/mobilenotes.js"></script>
+	<script type="text/javascript" src="scripts/appStartup.js"></script>
 	<script type="text/javascript" src="scripts/noteDBAccess.js"></script>
 	<script type="text/javascript" src="scripts/noteSchema.js"></script>
 	<script type="text/javascript" src="scripts/fields/dateField.js"></script>
