Moving the note model related stuff to models.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 	<script type="text/javascript" src="scripts/mobilenotes.js"></script>
 	<script type="text/javascript" src="scripts/appStartup.js"></script>
-	<script type="text/javascript" src="scripts/noteDBAccess.js"></script>
-	<script type="text/javascript" src="scripts/noteSchema.js"></script>
+	<script type="text/javascript" src="scripts/models/noteDBAccess.js"></script>
+	<script type="text/javascript" src="scripts/models/noteSchema.js"></script>
 	<script type="text/javascript" src="scripts/fields/dateField.js"></script>
 	<script type="text/javascript" src="scripts/fields/timeField.js"></script>
 	<script type="text/javascript" src="scripts/screens/editNoteDisplay.js"></script>
