Starting to split off the webSQLDB from the NoteDBAccess so we can use it for tags as well.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<script type="text/javascript" src="scripts/mobilenotes.js"></script>
 	<script type="text/javascript" src="scripts/appStartup.js"></script>
+	<script type="text/javascript" src="scripts/models/webSQLDB.js"></script>
 	<script type="text/javascript" src="scripts/models/noteDBAccess.js"></script>
 	<script type="text/javascript" src="scripts/models/noteSchema.js"></script>
 	<script type="text/javascript" src="scripts/fields/dateField.js"></script>
