Starting to use persistence.js to do our persistence, that way we don't have to write our own code to do it.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 	<script type="text/javascript" src="scripts/ext/jquery.mobile-1.0a2.js"></script>
 	
 	<script type="text/javascript" src="scripts/ext/aframe-current-jquery.js"></script>
+	<script type="text/javascript" src="scripts/ext/persistence.js"></script>
+	<script type="text/javascript" src="scripts/ext/persistence.store.sql.js"></script>
+	<script type="text/javascript" src="scripts/ext/persistence.store.websql.js"></script>
 
 	<script type="text/javascript" src="scripts/mobilenotes.js"></script>
 	<script type="text/javascript" src="scripts/appStartup.js"></script>
 	<script type="text/javascript" src="scripts/models/webSQLDB.js"></script>
-	<script type="text/javascript" src="scripts/models/noteDBAccess.js"></script>
+	<script type="text/javascript" src="scripts/models/persistenceDBAccess.js"></script>
 	<script type="text/javascript" src="scripts/models/noteSchema.js"></script>
+	<script type="text/javascript" src="scripts/models/tagSchema.js"></script>
 	<script type="text/javascript" src="scripts/fields/dateField.js"></script>
 	<script type="text/javascript" src="scripts/fields/timeField.js"></script>
 	<script type="text/javascript" src="scripts/screens/editNoteDisplay.js"></script>
