Tests pass again.

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>MobileNotes Unit Tests</title>
-        <script type="text/javascript" src="../scripts/ext/jquery-1.4.4.min.js" ></script>
+        <script type="text/javascript" src="../scripts/ext/jquery-1.5.min.js" ></script>
+        <script type="text/javascript" src="../scripts/ext/jquery.mobile-1.0a3.min.js" ></script>
         <script type="text/javascript" src="../scripts/ext/aframe-current-jquery.js" ></script>
 
         <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
