--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
 	<link rel="stylesheet" type="text/css" href="stylesheets/jquery.mobile-1.0a3.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/mobilenotes.css" />
 	
