A bunch of work so that the app doesn't blow up if even localStorage is not supported.

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 			<div data-role="content">
                 <p>
                     This note taking application was created by <a href="http://www.shanetomlinson.com">Shane Tomlinson</a> as
-                    a demo for <a href="http://www.aframejs.com">AFrameJS</a>.  In browsers that support HTML5's WebSQL,
-                    any notes created are stored in the browser's persistent storage, no data is ever sent to the
-                    server.  Right now, Safari and Chrome support this on the desktop, as well as the iPhone and Android
-                    default browsers.  No data is ever sent to the server.
+                    a demo for <a href="http://www.aframejs.com">AFrameJS</a>.  In browsers that support HTML5's WebSQL
+                    or localStorage, any notes created are stored in the browser's persistent storage, no data is ever sent to the
+                    server.  Right now, Safari, Chrome, and Firefox support this on the desktop, as well as the iPhone and Android
+                    default browsers.  No data is ever sent to the server.  Unfortunately, IE is seriously broken at this time.
                 </p>
                 <p>
                     <a href="http://www.aframejs.com">AFrameJS</a> is a Javascript MVC library aimed at making the development
