Using the newest AFrame, making the NoteExtraInfoDisplay say "Back" instead of "Back to Note" so that it can be used from the swipe as well.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <ul>
                         <li><a href="#main" class="btnSaveNote" data-icon="check" data-rel="back">Save</a></li>
                         <li><a href="#noteTags" class="btnExtraNoteInfo" data-icon="grid" data-rel="dialog" data-transition="slideup">Tag</a></li>
-                        <li><a href="#noteExtraInfo" class="btnExtraNoteInfo" data-icon="info" data-transition="slideup" data-rel="dialog">Tools &amp; Info</a></li>
+                        <li><a href="#noteExtraInfo" class="btnExtraNoteInfo" data-icon="info" data-transition="slideup" data-rel="dialog">Info</a></li>
                         <li><a href="#main" class="btnCancelNote" data-icon="back" data-rel="back">Cancel</a></li>
                     </ul>
                 </div>
@@ -114,11 +114,11 @@
                 </div>
 
                 <div>
-                    <label>Synced with Server:</label><span type="date" data-field="sync_date"></span> - <span type="time" data-field="sync_date"></span>
+                    <label>Synced with Server:</label><span type="date" data-field="sync_date">Never</span>
                 </div>
                 
                 <!--a href="#noteShare" data-role="button">Share</a-->
-                <a href="#noteEditForm" data-role="button" data-rel="back">Back To Note</a>
+                <a href="#noteEditForm" data-role="button" data-rel="back">Back</a>
             </div>
 			
 		</div>
