Starting to use the main controller a bit more, should probably rename it to the be a router.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div data-role="navbar">
 					<ul>
 						<li><a href="#appAbout" data-icon="gear">About</a></li>
-						<li><a href="#noteEditForm" id="btnAddNote" data-icon="plus">Add Note</a></li>
+						<li><a href="#" id="btnAddNote" data-icon="plus">Add Note</a></li>
 					</ul>
 				</div>
 			</footer>
